--- a/src/room5/room5.html
+++ b/src/room5/room5.html
@@ -64,13 +64,13 @@
     <a-text position="-2 2.3 7.8" rotation="0 180 0" value="(Back)" align="center"
             color="white" scale="0.4 0.4 0.4"></a-text>
 
-    <!-- Exit Door (Future: could lead to final area or back to entrance) -->
-    <a-box id="door-exit" position="2 1.5 8" width="1.5" height="2.5" depth="0.3"
-           material="color: #FFD700; roughness: 0.3"
-           class="door" data-target="../entrance.html"></a-box>
-    <a-text position="2 2.8 7.8" rotation="0 180 0" value="EXIT →" align="center"
-            color="red" scale="0.9 0.9 0.9"></a-text>
-    <a-text position="2 2.3 7.8" rotation="0 180 0" value="(Complete!)" align="center"
+    <!-- Door to Room 6 -->
+    <a-box id="door-room6" position="2 1.5 8" width="1.5" height="2.5" depth="0.3"
+           material="color: #4A4A4A; roughness: 0.3"
+           class="door" data-target="../room6/room6.html"></a-box>
+    <a-text position="2 2.8 7.8" rotation="0 180 0" value="ROOM 6 →" align="center"
+            color="red" scale="0.8 0.8 0.8"></a-text>
+    <a-text position="2 2.3 7.8" rotation="0 180 0" value="(Next)" align="center"
             color="white" scale="0.4 0.4 0.4"></a-text>
 
     <!-- Room Title -->
