--- a/src/room6/room6.html
+++ b/src/room6/room6.html
@@ -91,73 +91,80 @@
             <a-entity class="layer-pivot" position="0.1 0 -1.5">
                 <a-box class="material-layer" position="0 0 1.5" width="0.05" height="3" depth="3"
                        material="color: #A0522D; roughness: 0.3"></a-box>
-                <!-- Improved text: bigger, better positioned, with background -->
-                <a-plane position="0.03 0 3.2" width="2" height="0.8" material="color: #000000; opacity: 0.8" rotation="0 90 0"></a-plane>
-                <a-text position="0.04 0 3.2" value="HANFBETON\n(Hemp Concrete)" align="center"
-                        color="#00FF00" scale="0.8 0.8 0.8" rotation="0 90 0" font="roboto"></a-text>
+                <!-- Text visible from opposite side -->
+                <a-plane position="-0.3 0 3" width="2" height="0.8" material="color: #000000; opacity: 0.8" rotation="0 90 0" side="back"></a-plane>
+                <a-text position="-0.3 0 3" value="HANFBETON\n(Hemp Concrete)" align="center"
+                        color="#00FF00" scale="0.8 0.8 0.8" rotation="0 -90 0" font="roboto"></a-text>
             </a-entity>
 
             <!-- Layer 2: Hanfziegel -->
             <a-entity class="layer-pivot" position="0.2 0 -1.5">
                 <a-box class="material-layer" position="0 0 1.5" width="0.05" height="3" depth="3"
                        material="color: #CD853F; roughness: 0.3"></a-box>
-                <a-plane position="0.03 0 3.2" width="2" height="0.8" material="color: #000000; opacity: 0.8" rotation="0 90 0"></a-plane>
-                <a-text position="0.04 0 3.2" value="HANFZIEGEL\n(Hemp Bricks)" align="center"
-                        color="#FFD700" scale="0.8 0.8 0.8" rotation="0 90 0" font="roboto"></a-text>
+                <!-- Text visible from opposite side -->
+                <a-plane position="-0.3 0 3" width="2" height="0.8" material="color: #000000; opacity: 0.8" rotation="0 90 0" side="back"></a-plane>
+                <a-text position="-0.3 0 3" value="HANFZIEGEL\n(Hemp Bricks)" align="center"
+                        color="#FFD700" scale="0.8 0.8 0.8" rotation="0 -90 0" font="roboto"></a-text>
             </a-entity>
 
             <!-- Layer 3: Holz -->
             <a-entity class="layer-pivot" position="0.3 0 -1.5">
                 <a-box class="material-layer" position="0 0 1.5" width="0.05" height="3" depth="3"
                        material="color: #8B4513; roughness: 0.3"></a-box>
-                <a-plane position="0.03 0 3.2" width="1.5" height="0.8" material="color: #000000; opacity: 0.8" rotation="0 90 0"></a-plane>
-                <a-text position="0.04 0 3.2" value="HOLZ\n(Wood)" align="center"
-                        color="#FFFFFF" scale="0.8 0.8 0.8" rotation="0 90 0" font="roboto"></a-text>
+                <!-- Text visible from opposite side -->
+                <a-plane position="-0.3 0 3" width="1.5" height="0.8" material="color: #000000; opacity: 0.8" rotation="0 90 0" side="back"></a-plane>
+                <a-text position="-0.3 0 3" value="HOLZ\n(Wood)" align="center"
+                        color="#FFFFFF" scale="0.8 0.8 0.8" rotation="0 -90 0" font="roboto"></a-text>
             </a-entity>
 
             <!-- Layer 4: Kork -->
             <a-entity class="layer-pivot" position="0.4 0 -1.5">
                 <a-box class="material-layer" position="0 0 1.5" width="0.05" height="3" depth="3"
                        material="color: #DEB887; roughness: 0.3"></a-box>
-                <a-plane position="0.03 0 3.2" width="1.5" height="0.8" material="color: #000000; opacity: 0.8" rotation="0 90 0"></a-plane>
-                <a-text position="0.04 0 3.2" value="KORK\n(Cork)" align="center"
-                        color="#FF6600" scale="0.8 0.8 0.8" rotation="0 90 0" font="roboto"></a-text>
+                <!-- Text visible from opposite side -->
+                <a-plane position="-0.3 0 3" width="1.5" height="0.8" material="color: #000000; opacity: 0.8" rotation="0 90 0" side="back"></a-plane>
+                <a-text position="-0.3 0 3" value="KORK\n(Cork)" align="center"
+                        color="#FF6600" scale="0.8 0.8 0.8" rotation="0 -90 0" font="roboto"></a-text>
             </a-entity>
 
             <!-- Layer 5: Pflanzenkohle Beton -->
             <a-entity class="layer-pivot" position="0.5 0 -1.5">
                 <a-box class="material-layer" position="0 0 1.5" width="0.05" height="3" depth="3"
                        material="color: #696969; roughness: 0.3"></a-box>
-                <a-plane position="0.03 0 3.2" width="3" height="0.8" material="color: #000000; opacity: 0.8" rotation="0 90 0"></a-plane>
-                <a-text position="0.04 0 3.2" value="PFLANZENKOHLE\nBETON\n(Biochar Concrete)" align="center"
-                        color="#CYAN" scale="0.6 0.6 0.6" rotation="0 90 0" font="roboto"></a-text>
+                <!-- Text visible from opposite side -->
+                <a-plane position="-0.3 0 3" width="3" height="0.8" material="color: #000000; opacity: 0.8" rotation="0 90 0" side="back"></a-plane>
+                <a-text position="-0.3 0 3" value="PFLANZENKOHLE\nBETON\n(Biochar Concrete)" align="center"
+                        color="#CYAN" scale="0.6 0.6 0.6" rotation="0 -90 0" font="roboto"></a-text>
             </a-entity>
 
             <!-- Layer 6: Kupfer -->
             <a-entity class="layer-pivot" position="0.6 0 -1.5">
                 <a-box class="material-layer" position="0 0 1.5" width="0.05" height="3" depth="3"
                        material="color: #B87333; roughness: 0.3"></a-box>
-                <a-plane position="0.03 0 3.2" width="1.8" height="0.8" material="color: #000000; opacity: 0.8" rotation="0 90 0"></a-plane>
-                <a-text position="0.04 0 3.2" value="KUPFER\n(Copper)" align="center"
-                        color="#FF4444" scale="0.8 0.8 0.8" rotation="0 90 0" font="roboto"></a-text>
+                <!-- Text visible from opposite side -->
+                <a-plane position="-0.3 0 3" width="1.8" height="0.8" material="color: #000000; opacity: 0.8" rotation="0 90 0" side="back"></a-plane>
+                <a-text position="-0.3 0 3" value="KUPFER\n(Copper)" align="center"
+                        color="#FF4444" scale="0.8 0.8 0.8" rotation="0 -90 0" font="roboto"></a-text>
             </a-entity>
 
             <!-- Layer 7: Lehm -->
             <a-entity class="layer-pivot" position="0.7 0 -1.5">
                 <a-box class="material-layer" position="0 0 1.5" width="0.05" height="3" depth="3"
                        material="color: #A0522D; roughness: 0.3"></a-box>
-                <a-plane position="0.03 0 3.2" width="1.5" height="0.8" material="color: #000000; opacity: 0.8" rotation="0 90 0"></a-plane>
-                <a-text position="0.04 0 3.2" value="LEHM\n(Clay)" align="center"
-                        color="#FFFF00" scale="0.8 0.8 0.8" rotation="0 90 0" font="roboto"></a-text>
+                <!-- Text visible from opposite side -->
+                <a-plane position="-0.3 0 3" width="1.5" height="0.8" material="color: #000000; opacity: 0.8" rotation="0 90 0" side="back"></a-plane>
+                <a-text position="-0.3 0 3" value="LEHM\n(Clay)" align="center"
+                        color="#FFFF00" scale="0.8 0.8 0.8" rotation="0 -90 0" font="roboto"></a-text>
             </a-entity>
 
             <!-- Layer 8: Sumpfkalk -->
             <a-entity class="layer-pivot" position="0.8 0 -1.5">
                 <a-box class="material-layer" position="0 0 1.5" width="0.05" height="3" depth="3"
                        material="color: #EEE8AA; roughness: 0.3"></a-box>
-                <a-plane position="0.03 0 3.2" width="2.2" height="0.8" material="color: #000000; opacity: 0.8" rotation="0 90 0"></a-plane>
-                <a-text position="0.04 0 3.2" value="SUMPFKALK\n(Lime Mortar)" align="center"
-                        color="#MAGENTA" scale="0.8 0.8 0.8" rotation="0 90 0" font="roboto"></a-text>
+                <!-- Text visible from opposite side -->
+                <a-plane position="-0.3 0 3" width="2.2" height="0.8" material="color: #000000; opacity: 0.8" rotation="0 90 0" side="back"></a-plane>
+                <a-text position="-0.3 0 3" value="SUMPFKALK\n(Lime Mortar)" align="center"
+                        color="#MAGENTA" scale="0.8 0.8 0.8" rotation="0 -90 0" font="roboto"></a-text>
             </a-entity>
         </a-entity>
 
@@ -220,7 +227,7 @@
             <a-cursor position="0 0 -1"
                       geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.03"
                       material="color: white; shader: flat"
-                      raycaster="objects: .door, .tool, .cuttable-wall, .saw-interactive; showLine: true"></a-cursor>
+                      raycaster="objects: .door, .tool, .cuttable-wall, .saw-interactive, .material-layer; showLine: true"></a-cursor>
         </a-entity>
 
         <!-- World-space HUD fallback (hidden unless DOM Overlay is unavailable) -->
