--- a/src/room6/room6.html
+++ b/src/room6/room6.html
@@ -92,9 +92,9 @@
                 <a-box class="material-layer" position="0 0 1.5" width="0.05" height="3" depth="3"
                        material="color: #A0522D; roughness: 0.3"></a-box>
                 <!-- Text visible from opposite side -->
-                <a-plane position="-0.3 0 3" width="2" height="0.8" material="color: #000000; opacity: 0.8" rotation="0 90 0" side="back"></a-plane>
+                <a-plane position="-0.3 0 3" width="2" height="0.8" material="color: #000000; opacity: 0.8" rotation="0 90 0" side="back" visible="false"></a-plane>
                 <a-text position="-0.3 0 3" value="HANFBETON\n(Hemp Concrete)" align="center"
-                        color="#00FF00" scale="0.8 0.8 0.8" rotation="0 -90 0" font="roboto"></a-text>
+                        color="#00FF00" scale="0.8 0.8 0.8" rotation="0 -90 0" font="roboto" visible="false"></a-text>
             </a-entity>
 
             <!-- Layer 2: Hanfziegel -->
@@ -102,9 +102,9 @@
                 <a-box class="material-layer" position="0 0 1.5" width="0.05" height="3" depth="3"
                        material="color: #CD853F; roughness: 0.3"></a-box>
                 <!-- Text visible from opposite side -->
-                <a-plane position="-0.3 0 3" width="2" height="0.8" material="color: #000000; opacity: 0.8" rotation="0 90 0" side="back"></a-plane>
+                <a-plane position="-0.3 0 3" width="2" height="0.8" material="color: #000000; opacity: 0.8" rotation="0 90 0" side="back" visible="false"></a-plane>
                 <a-text position="-0.3 0 3" value="HANFZIEGEL\n(Hemp Bricks)" align="center"
-                        color="#FFD700" scale="0.8 0.8 0.8" rotation="0 -90 0" font="roboto"></a-text>
+                        color="#FFD700" scale="0.8 0.8 0.8" rotation="0 -90 0" font="roboto" visible="false"></a-text>
             </a-entity>
 
             <!-- Layer 3: Holz -->
@@ -112,9 +112,9 @@
                 <a-box class="material-layer" position="0 0 1.5" width="0.05" height="3" depth="3"
                        material="color: #8B4513; roughness: 0.3"></a-box>
                 <!-- Text visible from opposite side -->
-                <a-plane position="-0.3 0 3" width="1.5" height="0.8" material="color: #000000; opacity: 0.8" rotation="0 90 0" side="back"></a-plane>
+                <a-plane position="-0.3 0 3" width="1.5" height="0.8" material="color: #000000; opacity: 0.8" rotation="0 90 0" side="back" visible="false"></a-plane>
                 <a-text position="-0.3 0 3" value="HOLZ\n(Wood)" align="center"
-                        color="#FFFFFF" scale="0.8 0.8 0.8" rotation="0 -90 0" font="roboto"></a-text>
+                        color="#FFFFFF" scale="0.8 0.8 0.8" rotation="0 -90 0" font="roboto" visible="false"></a-text>
             </a-entity>
 
             <!-- Layer 4: Kork -->
@@ -122,9 +122,9 @@
                 <a-box class="material-layer" position="0 0 1.5" width="0.05" height="3" depth="3"
                        material="color: #DEB887; roughness: 0.3"></a-box>
                 <!-- Text visible from opposite side -->
-                <a-plane position="-0.3 0 3" width="1.5" height="0.8" material="color: #000000; opacity: 0.8" rotation="0 90 0" side="back"></a-plane>
+                <a-plane position="-0.3 0 3" width="1.5" height="0.8" material="color: #000000; opacity: 0.8" rotation="0 90 0" side="back" visible="false"></a-plane>
                 <a-text position="-0.3 0 3" value="KORK\n(Cork)" align="center"
-                        color="#FF6600" scale="0.8 0.8 0.8" rotation="0 -90 0" font="roboto"></a-text>
+                        color="#FF6600" scale="0.8 0.8 0.8" rotation="0 -90 0" font="roboto" visible="false"></a-text>
             </a-entity>
 
             <!-- Layer 5: Pflanzenkohle Beton -->
@@ -132,9 +132,9 @@
                 <a-box class="material-layer" position="0 0 1.5" width="0.05" height="3" depth="3"
                        material="color: #696969; roughness: 0.3"></a-box>
                 <!-- Text visible from opposite side -->
-                <a-plane position="-0.3 0 3" width="3" height="0.8" material="color: #000000; opacity: 0.8" rotation="0 90 0" side="back"></a-plane>
+                <a-plane position="-0.3 0 3" width="3" height="0.8" material="color: #000000; opacity: 0.8" rotation="0 90 0" side="back" visible="false"></a-plane>
                 <a-text position="-0.3 0 3" value="PFLANZENKOHLE\nBETON\n(Biochar Concrete)" align="center"
-                        color="#CYAN" scale="0.6 0.6 0.6" rotation="0 -90 0" font="roboto"></a-text>
+                        color="#CYAN" scale="0.6 0.6 0.6" rotation="0 -90 0" font="roboto" visible="false"></a-text>
             </a-entity>
 
             <!-- Layer 6: Kupfer -->
@@ -142,9 +142,9 @@
                 <a-box class="material-layer" position="0 0 1.5" width="0.05" height="3" depth="3"
                        material="color: #B87333; roughness: 0.3"></a-box>
                 <!-- Text visible from opposite side -->
-                <a-plane position="-0.3 0 3" width="1.8" height="0.8" material="color: #000000; opacity: 0.8" rotation="0 90 0" side="back"></a-plane>
+                <a-plane position="-0.3 0 3" width="1.8" height="0.8" material="color: #000000; opacity: 0.8" rotation="0 90 0" side="back" visible="false"></a-plane>
                 <a-text position="-0.3 0 3" value="KUPFER\n(Copper)" align="center"
-                        color="#FF4444" scale="0.8 0.8 0.8" rotation="0 -90 0" font="roboto"></a-text>
+                        color="#FF4444" scale="0.8 0.8 0.8" rotation="0 -90 0" font="roboto" visible="false"></a-text>
             </a-entity>
 
             <!-- Layer 7: Lehm -->
@@ -152,9 +152,9 @@
                 <a-box class="material-layer" position="0 0 1.5" width="0.05" height="3" depth="3"
                        material="color: #A0522D; roughness: 0.3"></a-box>
                 <!-- Text visible from opposite side -->
-                <a-plane position="-0.3 0 3" width="1.5" height="0.8" material="color: #000000; opacity: 0.8" rotation="0 90 0" side="back"></a-plane>
+                <a-plane position="-0.3 0 3" width="1.5" height="0.8" material="color: #000000; opacity: 0.8" rotation="0 90 0" side="back" visible="false"></a-plane>
                 <a-text position="-0.3 0 3" value="LEHM\n(Clay)" align="center"
-                        color="#FFFF00" scale="0.8 0.8 0.8" rotation="0 -90 0" font="roboto"></a-text>
+                        color="#FFFF00" scale="0.8 0.8 0.8" rotation="0 -90 0" font="roboto" visible="false"></a-text>
             </a-entity>
 
             <!-- Layer 8: Sumpfkalk -->
@@ -162,9 +162,9 @@
                 <a-box class="material-layer" position="0 0 1.5" width="0.05" height="3" depth="3"
                        material="color: #EEE8AA; roughness: 0.3"></a-box>
                 <!-- Text visible from opposite side -->
-                <a-plane position="-0.3 0 3" width="2.2" height="0.8" material="color: #000000; opacity: 0.8" rotation="0 90 0" side="back"></a-plane>
+                <a-plane position="-0.3 0 3" width="2.2" height="0.8" material="color: #000000; opacity: 0.8" rotation="0 90 0" side="back" visible="false"></a-plane>
                 <a-text position="-0.3 0 3" value="SUMPFKALK\n(Lime Mortar)" align="center"
-                        color="#MAGENTA" scale="0.8 0.8 0.8" rotation="0 -90 0" font="roboto"></a-text>
+                        color="#MAGENTA" scale="0.8 0.8 0.8" rotation="0 -90 0" font="roboto" visible="false"></a-text>
             </a-entity>
         </a-entity>
 
