--- a/src/room1/room1.html
+++ b/src/room1/room1.html
@@ -106,7 +106,7 @@
                   data-item="scanner"></a-gltf-model>
 
     <!-- Room Title -->
-    <a-text position="0 2.5 -7" value="ROOM 1" align="center"
+    <a-text position="0 2.5 -7" value="RAUM 1" align="center"
             color="black" scale="1.2 1.2 1.2"></a-text>
 
 
