--- a/src/room5/room5.html
+++ b/src/room5/room5.html
@@ -74,7 +74,7 @@
             color="white" scale="0.4 0.4 0.4"></a-text>
 
     <!-- Room Title -->
-    <a-text position="0 2.5 -7" value="ROOM 5" align="center"
+    <a-text position="0 2.5 -7" value="RAUM 5" align="center"
             color="black" scale="1.2 1.2 1.2"></a-text>
 
     <!-- Table -->
