--- a/src/room2/room2.html
+++ b/src/room2/room2.html
@@ -82,7 +82,7 @@
             color="white" scale="0.4 0.4 0.4"></a-text>
 
     <!-- Room Title -->
-    <a-text position="0 2.5 -7" value="ROOM 2" align="center"
+    <a-text position="0 2.5 -7" value="RAUM 2" align="center"
             color="black" scale="1.2 1.2 1.2"></a-text>
 
 
