--- a/src/room3/room3.html
+++ b/src/room3/room3.html
@@ -71,7 +71,7 @@
             color="white" scale="0.4 0.4 0.4"></a-text>
 
     <!-- Room Title -->
-    <a-text position="0 2.5 -7" value="ROOM 3" align="center"
+    <a-text position="0 2.5 -7" value="RAUM 3" align="center"
             color="black" scale="1.2 1.2 1.2"></a-text>
 
     <!-- Table -->
