--- a/src/room4/room4.html
+++ b/src/room4/room4.html
@@ -88,7 +88,7 @@
             color="white" scale="0.4 0.4 0.4"></a-text>
 
     <!-- Room Title -->
-    <a-text position="0 2.5 -7" value="ROOM 4" align="center"
+    <a-text position="0 2.5 -7" value="RAUM 4" align="center"
             color="black" scale="1.2 1.2 1.2"></a-text>
 
     <!-- Scanner Tool - grouped for proper alignment -->
