--- a/src/room6/room6.html
+++ b/src/room6/room6.html
@@ -193,7 +193,7 @@
             color="white" scale="0.4 0.4 0.4"></a-text>
 
     <!-- Room Title -->
-    <a-text position="0 2.5 -7" value="ROOM 6" align="center"
+    <a-text position="0 2.5 -7" value="RAUM 6" align="center"
             color="black" scale="1.2 1.2 1.2"></a-text>
 
     <!-- Saw Tool - grouped for proper alignment (same position as Room 2) -->
