added main room

--- a/src/main/main.html
+++ b/src/main/main.html
@@ -34,8 +34,8 @@
     </div>
     <div id="tools">🔧 Scanner: Verfuegbar</div>
     <div id="hand">📦 Leer</div>
-    <div id="materials">📊 Materialien gefunden: 0/8</div>
-    <div style="opacity:.8; font-size:12px;">Q = Fallen lassen | E = Scannen | Klick = Aufheben/Benutzen</div>
+    <div id="materials">📊 Richtig sortiert: 0/8</div>
+    <div style="opacity:.8; font-size:12px;">Q = Fallen lassen | E = Scan | R = Detail-Scan | Klick = Aufheben</div>
   </div>
 </div>
 
@@ -87,6 +87,8 @@
                   position="0 0 -9.5"
                   scale="0.02 0.02 0.02"
                   rotation="0 0 0"
+                  data-target="../end/end.html"
+                  class="door"
                   autocenter-gltf="ground: true"></a-gltf-model>
     <a-text id="exit-text" position="0 2.5 -9" value="🔒 GESPERRTER AUSGANG" align="center"
             color="red" scale="0.8 0.8 0.8"></a-text>
@@ -304,8 +306,8 @@
 
             <!-- Scan Result Tooltip: now follows the camera -->
             <a-plane id="scan-tooltip"
-                     position="0 -0.1 -1.2"
-                     width="2.2" height="1.2"
+                     position="0.7 0.4 -1.2"
+                     width="1.1" height="0.6"
                      material="color: #000000; opacity: 0.9"
                      visible="false">
                 <a-text id="scan-info"
@@ -313,7 +315,7 @@
                         value=""
                         align="center"
                         color="cyan"
-                        scale="0.3 0.3 0.3"></a-text>
+                        scale="0.25 0.25 0.25"></a-text>
             </a-plane>
         </a-entity>
 
@@ -323,8 +325,8 @@
                 <a-text value="HAUPTRAETSEL - INTEGRIERTER PROTOTYP" position="0 0.4 0.01" align="center" color="white" scale="0.4 0.4 0.4"></a-text>
                 <a-text id="world-inventory-tools" value="🔧 Scanner: Verfuegbar" position="0 0.15 0.01" align="center" color="lime" scale="0.3 0.3 0.3"></a-text>
                 <a-text id="world-hand-content" value="📦 Leer" position="0 -0.05 0.01" align="center" color="gray" scale="0.3 0.3 0.3"></a-text>
-                <a-text id="world-materials" value="📊 Materialien gefunden: 0/8" position="0 -0.25 0.01" align="center" color="yellow" scale="0.3 0.3 0.3"></a-text>
-                <a-text value="Q = Fallen lassen | E = Scannen" position="0 -0.45 0.01" align="center" color="yellow" scale="0.25 0.25 0.25"></a-text>
+                <a-text id="world-materials" value="📊 Richtig sortiert: 0/8" position="0 -0.25 0.01" align="center" color="yellow" scale="0.3 0.3 0.3"></a-text>
+                <a-text value="Q = Fallen lassen | E = Scan | R = Detail-Scan" position="0 -0.45 0.01" align="center" color="yellow" scale="0.22 0.22 0.22"></a-text>
             </a-plane>
         </a-entity>
     </a-entity>
