--- a/src/entrance.html
+++ b/src/entrance.html
@@ -53,38 +53,47 @@
 
     <!-- Male Avatar Guide -->
     <a-gltf-model id="guide-avatar" src="#maleAvatar"
-                  position="-2 0 -1"
+                  position="-3 0 1.2"
                   scale="1 1 1"
-                  rotation="0 45 0"
-                  animation="property: rotation; to: 0 75 0; dur: 3000; dir: alternate; loop: true"
-                  animation-mixer="clip: *; loop: once; clampWhenFinished: true"></a-gltf-model>
+                  rotation="0 60 0"
+    ></a-gltf-model>
 
     <!-- Welcome Speech Bubble -->
-    <a-plane id="speech-bubble" position="-2 1.8 -1"
+    <a-plane id="speech-bubble" position="-2 1.4 -0.5"
              width="3" height="2"
-             material="color: #ffffff; opacity: 0.9"
+             material="color: #2c3e50; opacity: 0.95"
              rotation="0 45 0"
              visible="true">
-        <a-text position="0 0.5 0.01"
+        <a-text position="0 0.8 0.01"
                 value="Willkommen im Openly Escape Room!"
                 align="center"
-                color="#333333"
-                scale="0.7 0.7 0.7"></a-text>
+                color="#f39c12"
+                scale="0.6 0.6 0.6"></a-text>
+        <a-text position="0 0.4 0.01"
+                value="BEWEGUNG: WASD-Tasten oder VR-Controller"
+                align="center"
+                color="#ecf0f1"
+                scale="0.4 0.4 0.4"></a-text>
         <a-text position="0 0.1 0.01"
-                value="WASD-Tasten oder VR-Controller zum Bewegen"
+                value="BLICK: Maus oder Kopfbewegung"
                 align="center"
-                color="#666666"
-                scale="0.45 0.45 0.45"></a-text>
+                color="#ecf0f1"
+                scale="0.4 0.4 0.4"></a-text>
         <a-text position="0 -0.2 0.01"
-                value="Umblicken mit Maus oder Kopfbewegung"
+                value="SCANNER: E = Einfach | R = Detail-Scan"
                 align="center"
-                color="#666666"
-                scale="0.45 0.45 0.45"></a-text>
+                color="#3498db"
+                scale="0.4 0.4 0.4"></a-text>
         <a-text position="0 -0.5 0.01"
-                value="Loese Raetsel und lerne ueber Nachhaltigkeit!"
+                value="AUFGABE: Materialien nach CO2-Bilanz sortieren"
                 align="center"
-                color="#666666"
-                scale="0.45 0.45 0.45"></a-text>
+                color="#27ae60"
+                scale="0.4 0.4 0.4"></a-text>
+        <a-text position="0 -0.8 0.01"
+                value="Q = Fallen lassen | Klick = Aufheben"
+                align="center"
+                color="#e74c3c"
+                scale="0.35 0.35 0.35"></a-text>
     </a-plane>
 
     <!-- START Button -->
@@ -110,11 +119,6 @@
                   class="door clickable"
                   visible="false"></a-gltf-model>
 
-    <!-- Room Title -->
-    <a-text position="0 2.5 -3" value="EINGANG" align="center"
-            color="black" scale="1.2 1.2 1.2"></a-text>
-
-
     <!-- Player Rig -->
     <a-entity id="rig"
               position="0 1.6 2"
@@ -135,7 +139,7 @@
 
 
     <!-- UI Text (initially hidden) -->
-    <a-text id="message" position="0 2.8 -2.5"
+    <a-text id="message" position="0 2.5 -3.5"
             value="Grossartig! Jetzt kannst du den Hauptraetselraum betreten.\nViel Glueck beim Entkommen!"
             align="center" color="cyan" scale="0.5 0.5 0.5" look-at="#playerCam"
             visible="false"></a-text>
